progressive_delivery/resources_mixerless/podinfo_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grandual-delivery-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 9898
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-gateway-vs
spec:
  hosts:
    - "*"
  gateways:
    - grandual-delivery-gateway
  http:
    - match:
        - port: 9898
      route:
        - destination:
            host: podinfo
